fix: fix css on share section no gap

--- a/themes/nitpum-blog/assets/scss/modules/fb/_index.scss
+++ b/themes/nitpum-blog/assets/scss/modules/fb/_index.scss
@@ -1,8 +1,3 @@
-.post-fb-page {
-	margin: auto;
-	width: 340px;
-}
-
 .facebook-share {
 	background-color: #1877f2;
 	color: #fff;
@@ -14,7 +9,6 @@
 	cursor: pointer;
 	font-family: Helvetica, Arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
-	margin: 0;
 	position: relative;
 	-webkit-user-select: none;
 	white-space: nowrap;
