--- a/themes/nitpum-blog/assets/scss/modules/share/_index.scss
+++ b/themes/nitpum-blog/assets/scss/modules/share/_index.scss
@@ -7,24 +7,7 @@
 	padding-right: 10px;
 
 	> * {
-		margin-right: 4px;
+		margin-right: 6px;
 	}
 }
 
-.fb-share-button {
-	display: inline-block !important;
-	width: 88px;
-	height: 28px;
-	text-align: center;
-	vertical-align: top;
-	margin-bottom: 8px;
-}
-
-.twitter-share-button:not(.twitter-share-button-rendered) {
-	display: inline-block !important;
-	width: 88px;
-	height: 28px;
-	text-align: center;
-	vertical-align: top;
-	margin-bottom: 8px;
-}
